Fix stars and forks numbers not aligning

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -639,7 +639,7 @@ a {
 
 .project-stars-forks {
   fill: $text-color;
-  margin-right: 0.5rem;
+  font-family: $font-family-logo;
 }
 
 .project-desc {
